# NESEmulator

./: .gitignore  CMakeLists.txt  Gamestested.txt  LICENSE  README.md  app.cpp  app_wasm.cpp  build.sh  build.txt  build_wasm.sh  config_wasm  main  main.cpp
includes/: 6502.cpp  6502.h  ImageMaker.cpp  apu.cpp  apu.h  bus.cpp  bus.h  cartridge.cpp  cartridge.h  pallete.h  ppu.cpp  ppu.h
testing/: ImageMaker.cpp  ImageMaker.h  apu2.cpp  apu2.h
